# EvenBook

eveng1_python_sdk/: debug_gestures.py  demo_evenbook.py  evenbook.py  gutenberg_api.py  pyproject.toml  test_display_preview.py  test_g1_connection_debug.py
eveng1_python_sdk/books/: Pride and Prejudice.json
eveng1_python_sdk/connector/: bluetooth.py
